Address all non-spec-level compiler warnings.